# llm-qa-framework

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: anthropic_claude.yaml  mock.yaml  openai_gpt4o.yaml
data/: clinic_knowledge_base.md  questions_qa.json  questions_rag.json  questions_safety.json
llm_test_framework/: __init__.py  data_loader.py
llm_test_framework/core/: config.py  llm_client.py
llm_test_framework/core/providers/: __init__.py  anthropic_client.py  factory.py  mock.py  openai_client.py
llm_test_framework/core/rag/: __init__.py  pipeline.py
llm_test_framework/evaluators/: __init__.py  deepeval_integration.py  metrics.py  semantic_similarity.py
llm_test_framework/reports/: __init__.py  reporter.py
tests/: conftest.py  test_core.py  test_evaluators.py  test_reports.py
tests/accuracy/: test_deepeval_llm.py  test_response_quality.py
tests/performance/: test_latency.py
tests/rag/: test_deepeval_rag.py  test_rag_pipeline.py
tests/safety/: test_harmful_content.py
